<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp">

        <TextView
            android:id="@+id/date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_date"
            android:textAppearance="@style/TextTitle.01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rectangle_stroke_2_corner_32"
            android:hint="@string/choose_date_hint"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingVertical="12dp"
            android:textAppearance="@style/TextBodyRegular.00"
            android:textColorHint="@color/gray60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_title" />

        <TextView
            android:id="@+id/time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/choose_time"
            android:textAppearance="@style/TextTitle.01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_edit" />

        <TextView
            android:id="@+id/time_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rectangle_stroke_2_corner_32"
            android:hint="@string/choose_time_hint"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingVertical="12dp"
            android:textAppearance="@style/TextBodyRegular.00"
            android:textColorHint="@color/gray60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time_title" />

        <TextView
            android:id="@+id/finish_input_date_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/highlight"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:text="@string/finish_input_date"
            android:textAppearance="@style/TextBodyRegular.01"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>