<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:paddingTop="24dp"
        tools:context=".presentation.todo.EditTaskActivity">

        <TextView
            android:id="@+id/edit_task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextTitle.00"
            android:textColor="@color/gray80"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/rectangle_stroke_2_corner_32"
            android:hint="@string/task_hint"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="28dp"
            android:paddingVertical="20dp"
            android:textAppearance="@style/TextBodyRegular.01"
            android:textColorHint="@color/gray60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_task_title" />

        <TextView
            android:id="@+id/date_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rectangle_stroke_2_corner_32"
            android:hint="@string/date_hint"
            android:maxLines="1"
            android:paddingHorizontal="28dp"
            android:paddingVertical="20dp"
            android:textAppearance="@style/TextBodyRegular.01"
            android:textColorHint="@color/gray60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_edit" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/finish_edit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="32dp"
            android:paddingVertical="18dp"
            android:background="@drawable/rectangle_stroke_2_corner_32"
            android:backgroundTint="@color/highlight"
            android:gravity="center"
            android:text="@string/register_btn"
            android:textAppearance="@style/TextBodyRegular.02"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>