<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.regist.RegistUserActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_image_frame"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/circle_photo_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/photo_camera_white_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/rectangle_stroke_2_corner_32"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:textAppearance="@style/TextBodyRegular.02"
            android:textColorHint="@color/gray60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image_frame" />

        <TextView
            android:id="@+id/birthday_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rectangle_stroke_2_corner_32"
            android:hint="@string/birthday_hint"
            android:maxLines="1"
            android:maxLength="10"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:textAppearance="@style/TextBodyRegular.02"
            android:textColorHint="@color/gray60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_edit" />


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rectangle_stroke_2_corner_32"
            android:backgroundTint="@color/highlight"
            android:gravity="center"
            android:text="@string/register_btn"
            android:textAppearance="@style/TextBodyRegular.02"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>